welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: illegal start of simple pattern
	case if Math.abs(200 - n) < 10 => true 
             ^nearHundred:3: error: '=>' expected but ';' found.
	case if Math.abs(100 - n) < 10 => true
^nearHundred:3: error: illegal start of simple pattern
	case if Math.abs(100 - n) < 10 => true
             ^nearHundred:4: error: '=>' expected but ';' found.
	case _ => false
^