welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = n match {
	case if Math.abs(200 - n) < 10 => true 
	case if Math.abs(100 - n) < 10 => true
	case _ => false
}

